# airc

./: .dockerignore  .gitignore  CURRENT_PLAN.md  Cargo.toml  Dockerfile  Dockerfile.prebuilt  Makefile  PLAN.md  README.md  SKILL.md  TODO.md  aircd.toml  install.sh
.github/workflows/: ci.yml  release.yml
crates/airc/: Cargo.toml
crates/airc-client/: Cargo.toml
crates/airc-client/src/: client.rs  config.rs  conn.rs  error.rs  event.rs  lib.rs  state.rs
crates/airc-client/src/handler/: cap.rs  channel.rs  message.rs  mod.rs  motd.rs  registration.rs  sasl.rs
crates/airc-mcp/: Cargo.toml
crates/airc-mcp/src/: lib.rs
crates/airc-services/: Cargo.toml
crates/airc-services/src/: config.rs  main.rs  module.rs
crates/airc-services/src/chanserv/: access.rs  mod.rs  registration.rs
crates/airc-services/src/nickserv/: identity.rs  keypair.rs  mod.rs  reputation.rs  silence.rs  social.rs
crates/airc-shared/: Cargo.toml  build.rs
crates/airc-shared/src/: lib.rs  log.rs  message.rs  prefix.rs  relay.rs  reply.rs  validate.rs
crates/airc/src/: daemon.rs  ipc.rs  main.rs
crates/aircd/: Cargo.toml
crates/aircd-redis-logger/: Cargo.toml  Dockerfile
crates/aircd-redis-logger/src/: main.rs
crates/aircd/src/: channel.rs  client.rs  config.rs  connection.rs  handler.rs  ipc.rs  logger.rs  main.rs  relay_tests.rs  server.rs  state.rs  util.rs  web.rs
crates/aircd/src/handler/: channel.rs  message.rs  mod.rs  mode.rs  nick.rs  server.rs  user.rs
crates/aircd/src/persist/: mod.rs
crates/aircd/src/persist/migrations/: 0001_init.sql
crates/aircd/src/relay/: mod.rs  noop.rs  redis.rs
crates/aircd/src/sasl/: error.rs  mod.rs  plain.rs  scram.rs
crates/aircd/src/services/: chanserv.rs  mod.rs  module.rs  nickserv.rs
crates/aircd/src/services/chanserv/: access.rs  dispatch.rs  mod.rs  persist.rs  registration.rs  state.rs  types.rs
crates/aircd/src/services/nickserv/: dispatch.rs  identity.rs  keypair.rs  mod.rs  persist.rs  reputation.rs  silence.rs  social.rs  state.rs  types.rs
crates/aircd/src/state/: channel.rs  mod.rs  relay.rs  stats.rs  user.rs
crates/aircd/src/tests/: crdt.rs  mod.rs  relay_inbound.rs  relay_outbound.rs  snapshot.rs
data/services/: aircd.db
doc/: RFC-AIRC-001.md
proto/: airc_ipc.proto  aircd_http_api.proto  aircd_ipc.proto  aird_http_api.proto  aird_ipc.proto  common.proto  relay.proto
site/: getting-started.html  identity.html  index.html  reference.html  reputation.html  style-modern.css  style.css  theme.js
