[workspace]
members = [
    "crates/airc-shared",
    "crates/airc-client",
    "crates/airc",
    "crates/aircd",
    "crates/airc-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
airc-shared = { path = "crates/airc-shared" }
airc-client = { path = "crates/airc-client" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
prost = "0.13"
thiserror = "2"
axum = "0.8"
toml = "0.8"
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
libc = "0.2"
glob = "0.3"
