[workspace]
members = [
    "crates/airc-shared",
    "crates/airc-client",
    "crates/airc",
    "crates/aircd",
    "crates/airc-mcp",
    "crates/airc-services",
    "crates/aircd-redis-logger",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
airc-shared = { path = "crates/airc-shared" }
airc-client = { path = "crates/airc-client" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
prost = "0.13"
thiserror = "2"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
toml = "0.8"
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
libc = "0.2"
glob = "0.3"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
rustls-pemfile = "2"
crdts = "7.3.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
sha3 = "0.10"
bincode = { version = "2", features = ["serde"] }
redis = { version = "0.27", features = ["tokio-comp"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
tokio-util = { version = "0.7", features = ["rt"] }
dashmap = "6"
