[package]
name = "airc-client"
description = "AIRC IRC client library — connect, send, receive, buffer messages"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
airc-shared.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
pbkdf2.workspace = true
rand.workspace = true
chrono.workspace = true
