[package]
name = "airc-mcp"
description = "AIRC MCP server — expose IRC daemon commands as MCP tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "airc_mcp"
path = "src/lib.rs"

[dependencies]
airc-shared.workspace = true
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rmcp.workspace = true
schemars.workspace = true
glob.workspace = true
