[package]
name = "airc-services"
description = "AIRC services — NickServ and ChanServ as external IRC clients"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "airc-services"
path = "src/main.rs"

[dependencies]
airc-shared.workspace = true
airc-client.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
clap.workspace = true
toml.workspace = true
