[package]
name = "airc-shared"
description = "IRC protocol parsing and shared protobuf data models"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost = "0.13"
serde = { workspace = true }
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
