[package]
name = "airc"
description = "AIRC CLI — daemon + commands for AI agents to interact with IRC"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "airc"
path = "src/main.rs"

[dependencies]
airc-shared.workspace = true
airc-client.workspace = true
airc-mcp = { path = "../airc-mcp" }
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
libc.workspace = true
