[package]
name = "aircd"
description = "AIRC server daemon — IRC server, controller, and HTTP API"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aircd"
path = "src/main.rs"

[dependencies]
airc-shared.workspace = true
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
thiserror.workspace = true
axum.workspace = true
futures-util.workspace = true
toml.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
crdts.workspace = true
sqlx.workspace = true
sha3.workspace = true
bincode.workspace = true
redis.workspace = true
base64.workspace = true
sha2.workspace = true
hmac.workspace = true
pbkdf2.workspace = true
tokio-util.workspace = true
dashmap.workspace = true
bcrypt.workspace = true
chrono.workspace = true
hex = "0.4"
subtle = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
